--- a/blocks.html
+++ b/blocks.html
@@ -1,204 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>FAI | AMIAH_DOODLES_ULTIMATE 🧬</title>
+    <title>FAI | RC107_SOFT_GLOW 🧬</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <style>
         :root {
-            --bg: #000; --thermal: #fff000; --glow: 0 0 25px #fff000; --sig: #00f2ff;
+            --bg: #000;
+            --aqua: oklch(75% 0.12 210);
+            --aqua-dim: oklch(40% 0.08 210);
+            --glow: 0 0 6px rgba(0, 242, 255, 0.6);
+            --flash-bg: oklch(15% 0.04 210);
+            --text-soft: oklch(85% 0 0);
         }
         * { margin:0; padding:0; box-sizing:border-box; -webkit-tap-highlight-color:transparent; font-family: 'Courier New', monospace; }
         body {
-            background: var(--bg); color: #fff; height: 100dvh; overflow: hidden;
-            display: flex; flex-direction: column; align-items: center;
-            transition: background 0.1s ease-out; touch-action: none;
+            background: var(--bg); color: var(--text-soft); height: 100dvh; overflow: hidden;
+            display: flex; flex-direction: column; align-items: center; touch-action: none;
         }
-        body.mint-pulse { background: #222200 !important; }
+        body.flash { background: var(--flash-bg) !important; transition: background 0.05s ease-out; }
 
-        .chain-data { width: 100%; background: #080808; border-bottom: 1px solid #222; padding: 5px 15px; font-size: 8px; color: #555; overflow: hidden; white-space: nowrap; }
-        .ticker-scroll { display: inline-block; animation: scroll 65s linear infinite; }
+        .ticker { width: 100%; background: #080808; border-bottom: 1px solid #222; padding: 5px; font-size: 8px; color: var(--aqua-dim); overflow: hidden; white-space: nowrap; }
+        .ticker-move { display: inline-block; animation: scroll 80s linear infinite; will-change: transform; }
         @keyframes scroll { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }
 
-        .header { width: 360px; display: flex; justify-content: space-between; padding: 15px 0; border-bottom: 2px solid #222; z-index: 10; }
-        #timer { font-size: 24px; font-weight: 900; color: #f0f; text-shadow: 0 0 10px #f0f; }
-        #yield { font-size: 28px; color: var(--thermal); text-shadow: var(--glow); font-weight: 900; }
+        .header { width: 360px; display: flex; justify-content: space-between; padding: 15px 0; border-bottom: 2px solid #222; }
+        #timer { font-size: 24px; font-weight: 900; color: #f0f; text-shadow: 0 0 6px #f0f; }
+        #yield { font-size: 28px; color: var(--aqua); text-shadow: var(--glow); font-weight: 900; }
 
-        .grid-wrap { padding: 6px; background: #111; border-radius: 12px; border: 2px solid #333; margin-top: 15px; position: relative; }
+        .grid-wrap { padding: 6px; background: #111; border-radius: 12px; border: 2px solid #222; margin-top: 15px; position: relative; }
         #grid { display: grid; grid-template-columns: repeat(9, 1fr); gap: 2px; width: 340px; height: 340px; }
-        .cell { background: #050505; border-radius: 2px; border: 1px solid #111; }
-        .filled { background: var(--thermal); box-shadow: var(--glow); border: none; z-index: 2; }
-        .snap-guide { background: rgba(0, 242, 255, 0.3) !important; border: 1px solid var(--sig); }
+        .cell { background: #050505; border-radius: 2px; border: 1px solid #151515; }
+        .filled { background: var(--aqua); box-shadow: var(--glow); border: none; z-index: 2; }
+        .snap-guide { background: rgba(0, 242, 255, 0.15) !important; border: 1px solid var(--aqua-dim); }
 
-        .tray { width: 360px; height: 120px; display: flex; justify-content: space-around; align-items: center; margin-top: 15px; background: rgba(255,255,255,0.02); border-radius: 20px; }
+        .tray { width: 360px; height: 120px; display: flex; justify-content: space-around; align-items: center; margin-top: 15px; background: rgba(255,255,255,0.01); border-radius: 20px; }
         .slot { width: 100px; height: 100px; display: flex; align-items: center; justify-content: center; transform: scale(1.1); }
-        .drag-active { position: fixed; pointer-events: none; z-index: 1000; transform: translateY(-135px) scale(1.15); filter: drop-shadow(var(--glow)); }
+        .drag-active { position: fixed; pointer-events: none; z-index: 1000; transform: translateY(-135px) scale(1.15); filter: drop-shadow(var(--glow)); will-change: transform; }
 
-        .ignite-btn { width: 85%; padding: 18px; margin-top: auto; margin-bottom: 30px; border: 2px solid var(--thermal); background: transparent; color: var(--thermal); font-weight: 900; letter-spacing: 5px; border-radius: 50px; text-shadow: var(--glow); cursor: pointer; }
+        .ignite-btn { width: 85%; padding: 18px; margin-top: auto; margin-bottom: 30px; border: 2px solid var(--aqua-dim); background: transparent; color: var(--aqua); font-weight: 900; letter-spacing: 5px; border-radius: 50px; cursor: pointer; transition: all 0.1s; }
+        .ignite-btn:active { transform: scale(0.98); background: rgba(0,242,255,0.05); }
     </style>
 </head>
 <body onload="init()">
 
-<div class="chain-data">
-    <div class="ticker-scroll">
-        ID: voluntaryistj.base.eth | LIAISON: 0x6e47...114c | VAULT: 0x465e...b0f5 | PROTECT: 0x8eA6...10E6 | @agorajay -> AMIAH_DOODLES | IOTA_BRIDGE: 0xd944...0782 | AIRDROP_2019: 0xc668...664f | SCARCITY: 21M/144M
+<div class="ticker">
+    <div class="ticker-move">
+        EYE_OPTIMIZED: OKLCH_75% | ID: voluntaryistj.base.eth | LIAISON: 0x6e47...114c | PROTECT: 0x8eA6...10E6 | LIQUIDITY_LOCK: ACTIVE | SCARCITY: 21M | AIRDROP: 0xc668...664f
     </div>
 </div>
 
 <div class="header">
-    <div>
-        <div style="color:var(--thermal); font-size: 11px; font-weight: 900;">FAI // AMIAH ULTIMATE</div>
-        <div id="timer">150s</div>
-    </div>
-    <div style="text-align:right"><small style="color:#444">X25_MINED_YIELD</small><div id="yield">0.0000</div></div>
+    <div><div style="color:var(--aqua-dim); font-size: 11px;">FAI // RC107</div><div id="timer">150s</div></div>
+    <div style="text-align:right"><small style="color:#444">YIELD_MINED</small><div id="yield">0.0000</div></div>
 </div>
 
 <div class="grid-wrap"><div id="grid"></div></div>
 <div id="tray" class="tray"></div>
 
-<button class="ignite-btn" onclick="igniteEngine()">IGNITE ULTIMATE NODE</button>
+<button class="ignite-btn" onclick="ignite()">IGNITE SOFT GLOW</button>
 
 <script>
-    let board = Array(81).fill(0), ftc_yield = 0, timer = 150, active = false;
-    let audio = null, beatIdx = 0, dragging = null;
-    const shapes = [[[1,1,1],[1,1,1]], [[1,1,1]], [[1,1],[1,1]], [[1]], [[1,1,1,1]], [[1,1,1],[0,1,0]], [[1,1,1,1,1]]];
+    let board = Array(81).fill(0), yield_val = 0, timer = 150, active = false, dragging = null, audio = null;
+    const shapes = [[[1,1,1],[1,1,1]], [[1,1,1]], [[1,1],[1,1]], [[1]], [[1,1,1,1]], [[1,1,1],[0,1,0]]];
 
     function init() {
-        const g = document.getElementById('grid'); g.innerHTML = '';
+        const g = document.getElementById('grid'), f = document.createDocumentFragment();
         for(let i=0; i<81; i++) {
-            let c = document.createElement('div'); c.className = 'cell'; c.id = 'c-'+i; g.appendChild(c);
+            let c = document.createElement('div'); c.className = 'cell'; c.id = 'c-'+i; f.appendChild(c);
         }
-        refreshTray();
+        g.appendChild(f); refreshTray();
     }
 
-    function igniteEngine() {
+    function ignite() {
         if(!audio) {
-            audio = new (window.AudioContext || window.webkitAudioContext)();
-            setupBinaural(40, -1); setupBinaural(51.11, 1); 
-            active = true;
-            document.querySelector('.ignite-btn').style.display = 'none';
-            setInterval(() => {
-                if(timer > 0) {
-                    timer--; document.getElementById('timer').innerText = timer + "s";
-                } else {
-                    active = false; alert("ULTIMATE EXTRACTION COMPLETE. YIELD ROUTED TO VAULT."); location.reload();
-                }
-            }, 1000);
-            setInterval(engineTick, 500); // 120BPM Sync
+            audio = new AudioContext();
+            setupBinaural(38, -1); setupBinaural(49.5, 1);
+            active = true; document.querySelector('.ignite-btn').style.display = 'none';
+            setInterval(() => { if(timer > 0) { timer--; document.getElementById('timer').innerText = timer + "s"; } else location.reload(); }, 1000);
+            setInterval(tick, 600); 
         }
     }
 
     function setupBinaural(f, p) {
         let o = audio.createOscillator(), s = audio.createStereoPanner(), g = audio.createGain();
-        o.frequency.value = f; s.pan.value = p; g.gain.value = 0.01;
+        o.frequency.value = f; s.pan.value = p; g.gain.value = 0.002;
         o.connect(s).connect(g).connect(audio.destination); o.start();
     }
 
-    function engineTick() {
-        if(!active) return;
-        beatIdx++;
-        if(beatIdx % 4 === 0) percussive(60, 0.15, 'sine'); // Industrial Kick
-        percussive(11500, 0.01, 'white-noise'); // Addictive Hi-Hat
-    }
+    function tick() { if(active) { percussive(60, 0.12, 0.04); percussive(10800, 0.01, 0.02); } }
 
-    function percussive(f, d, type) {
-        let g = audio.createGain();
-        if(type === 'white-noise') {
-            const buf = audio.createBuffer(1, audio.sampleRate * d, audio.sampleRate);
-            const data = buf.getChannelData(0);
-            for(let i=0; i<buf.length; i++) data[i] = Math.random() * 2 - 1;
-            const src = audio.createBufferSource();
-            src.buffer = buf; src.connect(g).connect(audio.destination); src.start();
-        } else {
-            let o = audio.createOscillator(); o.type = type;
-            o.frequency.setValueAtTime(f, audio.currentTime);
-            o.frequency.exponentialRampToValueAtTime(0.01, audio.currentTime + d);
-            o.connect(g).connect(audio.destination); o.start(); o.stop(audio.currentTime + d);
-        }
-        g.gain.setValueAtTime(0.06, audio.currentTime);
-        g.gain.exponentialRampToValueAtTime(0.001, audio.currentTime + d);
+    function percussive(f, d, vol) {
+        let o = audio.createOscillator(), g = audio.createGain();
+        o.frequency.setValueAtTime(f, audio.currentTime); o.connect(g).connect(audio.destination);
+        g.gain.setValueAtTime(vol, audio.currentTime); g.gain.exponentialRampToValueAtTime(0.001, audio.currentTime + d);
+        o.start(); o.stop(audio.currentTime + d);
     }
 
     function refreshTray() {
-        const t = document.getElementById('tray'); t.innerHTML = '';
+        const t = document.getElementById('tray'), f = document.createDocumentFragment();
         for(let i=0; i<3; i++) {
-            let s = shapes[Math.floor(Math.random() * shapes.length)];
-            let slot = document.createElement('div'); slot.className = 'slot';
-            slot.appendChild(renderPiece(s, i, 20)); t.appendChild(slot);
+            let s = shapes[Math.floor(Math.random() * shapes.length)], slot = document.createElement('div');
+            slot.className = 'slot'; slot.appendChild(renderPiece(s, i, 20)); f.appendChild(slot);
         }
+        t.innerHTML = ''; t.appendChild(f);
     }
 
-    function renderPiece(shape, index, size) {
-        const container = document.createElement('div');
-        container.style.display = 'grid';
-        container.style.gridTemplateColumns = `repeat(${shape[0].length}, ${size}px)`;
-        container.style.gap = '2px';
-        shape.forEach(row => row.forEach(val => {
-            let c = document.createElement('div'); c.style.width = size+'px'; c.style.height = size+'px';
-            if(val) c.className = 'cell filled'; else c.style.opacity = '0';
-            container.appendChild(c);
+    function renderPiece(s, idx, sz) {
+        const c = document.createElement('div'); c.style.display = 'grid';
+        c.style.gridTemplateColumns = `repeat(${s[0].length}, ${sz}px)`; c.style.gap = '2px';
+        s.forEach(r => r.forEach(v => {
+            let d = document.createElement('div'); d.style.width = sz+'px'; d.style.height = sz+'px';
+            if(v) d.className = 'cell filled'; else d.style.opacity = '0'; c.appendChild(d);
         }));
-        if(index !== -1) container.ontouchstart = (e) => startDrag(e, shape, index);
-        return container;
+        if(idx !== -1) c.ontouchstart = (e) => startDrag(e, s, idx);
+        return c;
     }
 
-    function startDrag(e, shape, index) {
-        if(!active) return;
-        dragging = { shape, index, el: renderPiece(shape, -1, 38) };
-        dragging.el.classList.add('drag-active');
-        document.body.appendChild(dragging.el);
-        moveAt(e.touches[0]);
+    function startDrag(e, s, idx) {
+        if(!active) return; dragging = { s, idx, el: renderPiece(s, -1, 38) };
+        dragging.el.classList.add('drag-active'); document.body.appendChild(dragging.el); move(e.touches[0]);
     }
 
-    function moveAt(t) {
+    function move(t) {
         if(!dragging) return;
-        dragging.el.style.left = t.clientX - (dragging.el.offsetWidth / 2) + 'px';
+        dragging.el.style.left = (t.clientX - dragging.el.offsetWidth / 2) + 'px';
         dragging.el.style.top = t.clientY + 'px';
         document.querySelectorAll('.cell').forEach(c => c.classList.remove('snap-guide'));
-        const target = document.elementFromPoint(t.clientX, t.clientY - 135); // 🪶 Calibration
+        let target = document.elementFromPoint(t.clientX, t.clientY - 135);
         if(target && target.classList.contains('cell')) {
-            const id = parseInt(target.id.split('-')[1]);
-            if(canPlace(id, dragging.shape)) showSnap(id, dragging.shape);
+            let id = parseInt(target.id.split('-')[1]);
+            if(canPlace(id, dragging.s)) showSnap(id, dragging.s);
         }
     }
 
-    document.ontouchmove = (e) => { if(dragging) { e.preventDefault(); moveAt(e.touches[0]); } };
+    document.ontouchmove = (e) => { if(dragging) { e.preventDefault(); move(e.touches[0]); } };
 
     function canPlace(id, s) {
-        const r = Math.floor(id/9), c = id%9;
+        let r = Math.floor(id/9), c = id%9;
         for(let i=0; i<s.length; i++) for(let j=0; j<s[0].length; j++)
             if(s[i][j]) { let nr=r+i, nc=c+j; if(nr>=9 || nc>=9 || board[nr*9+nc]) return false; }
         return true;
     }
 
     function showSnap(id, s) {
-        const r = Math.floor(id/9), c = id%9;
-        s.forEach((row, i) => row.forEach((val, j) => {
-            if(val) document.getElementById('c-' + ((r+i)*9 + (c+j))).classList.add('snap-guide');
+        let r = Math.floor(id/9), c = id%9;
+        s.forEach((row, i) => row.forEach((v, j) => {
+            if(v) document.getElementById('c-' + ((r+i)*9 + (c+j))).classList.add('snap-guide');
         }));
     }
 
     document.ontouchend = (e) => {
         if(!dragging) return;
-        const target = document.elementFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY - 135);
-        if(target && target.classList.contains('cell')) {
-            const id = parseInt(target.id.split('-')[1]);
-            if(canPlace(id, dragging.shape)) {
-                placePiece(id, dragging.shape);
-                document.getElementById('tray').children[dragging.index].innerHTML = '';
-                if([...document.getElementById('tray').querySelectorAll('.slot')].every(s => s.innerHTML === '')) refreshTray();
+        let t = document.elementFromPoint(e.changedTouches[0].clientX, e.changedTouches[0].clientY - 135);
+        if(t && t.classList.contains('cell')) {
+            let id = parseInt(t.id.split('-')[1]);
+            if(canPlace(id, dragging.s)) {
+                place(id, dragging.s); document.getElementById('tray').children[dragging.idx].innerHTML = '';
+                if([...document.getElementById('tray').children].every(s => s.innerHTML === '')) refreshTray();
             }
         }
         dragging.el.remove(); dragging = null;
     };
 
-    function placePiece(id, s) {
-        const r = Math.floor(id/9), c = id%9;
-        s.forEach((row, i) => row.forEach((val, j) => {
-            if(val) { board[(r+i)*9+c+j]=1; document.getElementById('c-'+((r+i)*9+c+j)).className='cell filled'; }
+    function place(id, s) {
+        let r = Math.floor(id/9), c = id%9;
+        s.forEach((row, i) => row.forEach((v, j) => {
+            if(v) { board[(r+i)*9+c+j]=1; document.getElementById('c-'+((r+i)*9+c+j)).className='cell filled'; }
         }));
-        percussive(2500, 0.04, 'triangle'); // Mechanical Click
-        if(navigator.vibrate) navigator.vibrate(10);
-        checkClears();
+        if(navigator.vibrate) navigator.vibrate(8); checkClears();
     }
 
     function checkClears() {
@@ -209,20 +178,16 @@
             if(rF) rs.push(i); if(cF) cs.push(i);
         }
         for(let y=0; y<9; y+=3) for(let x=0; x<9; x+=3) {
-            let sF=true;
-            for(let i=0; i<3; i++) for(let j=0; j<3; j++) if(!board[(y+i)*9+(x+j)]) sF=false;
+            let sF=true; for(let i=0; i<3; i++) for(let j=0; j<3; j++) if(!board[(y+i)*9+(x+j)]) sF=false;
             if(sF) sqs.push({y,x});
         }
-        let total = rs.length + cs.length + sqs.length;
-        if(total > 0) {
-            yield_extracted += total * 0.444; 
-            document.getElementById('yield').innerText = yield_extracted.toFixed(4);
-            document.body.classList.add('mint-pulse');
-            setTimeout(() => document.body.classList.remove('mint-pulse'), 100);
+        if(rs.length + cs.length + sqs.length > 0) {
+            yield_val += (rs.length + cs.length + sqs.length) * 0.444; document.getElementById('yield').innerText = yield_val.toFixed(4);
+            document.body.classList.add('flash'); setTimeout(() => document.body.classList.remove('flash'), 100);
             rs.forEach(r => { for(let c=0; c<9; c++) board[r*9+c]=0; });
             cs.forEach(c => { for(let r=0; r<9; r++) board[r*9+c]=0; });
             sqs.forEach(s => { for(let i=0; i<3; i++) for(let j=0; j<3; j++) board[(s.y+i)*9+(s.x+j)]=0; });
-            setTimeout(redraw, 150); percussive(150, 0.4, 'triangle'); 
+            setTimeout(redraw, 150);
         }
     }
 
